--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,24 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.bg-primary {
+  @apply bg-white dark:bg-[#0E141B];
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  @apply text-slate-900 dark:text-white;
+}
+
+p {
+  @apply text-slate-500 dark:text-slate-400;
+}
+
+footer {
+  @apply text-gray-600 bg-gray-100 dark:bg-slate-600/50 dark:text-white;
+}
