--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,5 +20,5 @@ p {
 }
 
 footer {
-  @apply text-gray-600 bg-gray-100 dark:bg-slate-600/50 dark:text-white;
+  @apply text-gray-600 bg-[#C8E3F4] dark:bg-[#192129] dark:text-white;
 }
