--- a/styles/global.css
+++ b/styles/global.css
@@ -2,36 +2,44 @@
 @tailwind components;
 @tailwind utilities;
 
-.bg-primary {
-  @apply bg-[#CAE4F5] dark:bg-[#070707];
+@layer components {
+  .bg-primary {
+    @apply bg-[#CAE4F5] dark:bg-[#070707];
+  }
+
+  .bg-background {
+    @apply bg-white dark:bg-[#0E141B];
+  }
+
+  .over {
+    @apply border-green-300 dark:border-blue-500 border-2;
+  }
+
+  .unLine {
+    @apply hover:underline-offset-8 hover:underline;
+  }
+
+  .ts-color {
+    @apply transition-colors ease-in-out duration-1000;
+  }
+
+  .text-primary {
+    @apply text-slate-500 dark:text-neutral-200;
+  }
+
+  .text-background {
+    @apply text-black dark:text-white;
+  }
 }
 
-.bg-background {
-  @apply bg-white dark:bg-[#0E141B];
-}
+@layer base {
+  body {
+    @apply bg-background h-full overflow-x-hidden;
+  }
 
-.unLine {
-  @apply hover:underline-offset-8 hover:underline;
-}
-
-body {
-  @apply bg-background h-full overflow-x-hidden;
-}
-
-.ts-color {
-  @apply transition-colors ease-in-out duration-1000;
-}
-
-.text-primary {
-  @apply text-slate-500 dark:text-neutral-200;
-}
-
-.text-background {
-  @apply text-black dark:text-white;
-}
-
-footer {
-  @apply text-gray-600 bg-[#C8E3F4] dark:bg-[#192129] dark:text-white;
+  footer {
+    @apply text-gray-600 bg-[#C8E3F4] dark:bg-[#192129] dark:text-white;
+  }
 }
 
 @layer utilities {
