--- a/styles/global.css
+++ b/styles/global.css
@@ -12,7 +12,7 @@
   }
 
   .over {
-    @apply border-green-300 dark:border-blue-500 border-2;
+    @apply border-green-300 dark:border-blue-500 border-2 opacity-50;
   }
 
   .unLine {
