--- a/styles/global.css
+++ b/styles/global.css
@@ -3,8 +3,18 @@
 @tailwind utilities;
 
 @layer components {
+  .sun {
+    background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
+    box-shadow: 0px 1px 15px 5px #fda085;
+  }
+  .moon {
+    border-radius: 50%;
+    background-color: #f5f4f6;
+    box-shadow: -0 0 2em #f5f4f6, 0 0 1.2em #f5f4f6;
+  }
+
   .bg-primary {
-    @apply bg-[#CAE4F5] dark:bg-[#070707];
+    @apply bg-[#CAE4F5] dark:bg-[#151E27];
   }
 
   .bg-background {
