--- a/styles/global.css
+++ b/styles/global.css
@@ -44,7 +44,7 @@
 
 @layer base {
   body {
-    @apply bg-background h-full overflow-x-hidden;
+    @apply bg-primary h-full overflow-x-hidden transition-all duration-1000 ease-in-out;
   }
 
   footer {
