--- a/styles/global.css
+++ b/styles/global.css
@@ -41,7 +41,7 @@
 @layer base {
   html,
   body {
-    @apply bg-white dark:bg-[#0E141B] h-full overflow-x-hidden;
+    @apply bg-background h-full overflow-x-hidden;
   }
 
   footer {
