--- a/styles/global.css
+++ b/styles/global.css
@@ -14,7 +14,7 @@
   }
 
   .bg-primary {
-    @apply bg-[#CAE4F5]/90 dark:bg-[#151E27];
+    @apply bg-[#CAE4F5] dark:bg-[#151E27];
   }
 
   .moon-shadow {
@@ -42,7 +42,7 @@
   }
 
   .text-gradient {
-    @apply font-bold text-transparent text-[16px] bg-clip-text bg-gradient-to-r from-[#C3FA07] to-green-200 dark:from-green-300 dark:to-blue-600;
+    @apply font-bold text-transparent text-[16px] bg-clip-text bg-gradient-to-r from-cyan-400 to-green-400 dark:from-green-300 dark:to-blue-600;
   }
 }
 
