--- a/styles/global.css
+++ b/styles/global.css
@@ -42,7 +42,7 @@
   }
 
   .text-gradient {
-    @apply font-bold text-transparent text-[16px] bg-clip-text bg-gradient-to-r from-cyan-400 to-green-400 dark:from-green-300 dark:to-blue-600;
+    @apply font-bold text-transparent bg-clip-text bg-gradient-to-r from-cyan-400 to-green-400 dark:from-green-300 dark:to-blue-600;
   }
 }
 
