--- a/styles/global.css
+++ b/styles/global.css
@@ -22,7 +22,7 @@
   }
 
   .bg-background {
-    @apply bg-white dark:bg-[#0E141B];
+    @apply bg-white dark:bg-[#090d11];
   }
 
   .over {
@@ -49,7 +49,7 @@
 @layer base {
   html,
   body {
-    @apply bg-white dark:bg-[#0E141B];
+    @apply bg-white dark:bg-[#090d11];
   }
 
   footer {
