feat: 이전글 다음글 기능

--- a/styles/global.css
+++ b/styles/global.css
@@ -25,6 +25,10 @@
     @apply bg-white dark:bg-[#0E141B];
   }
 
+  .bg-gradient {
+    @apply bg-gradient-to-r from-cyan-400 to-green-400 dark:from-green-300 dark:to-blue-600;
+  }
+
   .over {
     @apply outline outline-green-300 dark:outline-blue-500;
   }
